priced aligned and fixed. maybe change colors next?

--- a/css/landing-page/latest.css
+++ b/css/landing-page/latest.css
@@ -48,8 +48,8 @@
     padding: 20px 70px;
     font-size: 3rem;
     background: white;
-    color: #cecece;
-    border: 1px solid #cecece;
+    color: #000000;
+    border: 1px solid #dddddd;
 }
 #latest .body{
     padding: 100px 0;
@@ -151,6 +151,21 @@
     top: 19px;
     left: -2px;
 }
+
+#latest .body .column .line{
+    width:20%;
+    height: 2px;
+    background: #6f59f1;
+    margin: 50px auto;
+    display: inline-block;
+}
+#latest .body .column .price{
+    color: #6f59f1;
+    font-weight: 700;
+    font-size: 2.5rem; 
+}
+    
+
 
  
  
